# dyd

./: README.md  README_cn.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: frontend.yml  publish.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: clipboard.json  default.json  desktop.json  dialog.json  filesystem.json  global-shortcut.json  os.json  window.json
src-tauri/icons/: icon.icns
src-tauri/src/: common.rs  constants.rs  global_shortcut.rs  lib.rs  main.rs  menu.rs  window.rs
src-tauri/src/cmd/: common.rs  mod.rs  screenshot.rs  window.rs  xcreenshot.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/platform/linux/: linux.rs
src-tauri/src/platform/mac/: mod.rs  screenshot.rs  window.rs
src-tauri/src/platform/window/: window.rs
src/components/: FileList.tsx
src/utils/: datetime.ts  file.ts
