[package]
name = "dyd"
version = "0.1.6"
description = "DYD excalidraw tool"
authors = ["ayac3j@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dyd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["config-json5"] }

[dependencies]
tauri = { version = "2", features = [
  "macos-private-api",
  "protocol-asset",
  "config-json5",
  "tray-icon",
] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.38"
anyhow = "1.0.93"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2.0.2"
scrap = "0.5.0"
strum_macros = "0.26.4"
strum = "0.26.3"
image = "0.25.5"
tauri-plugin-store = "2"
xcap = "0.0.14"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
tauri-plugin-os = "2"
core-foundation = "0.10.0"
libc = "0.2.164"
base64 = "0.22.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = { version = "2.0.0", features = ["tray-icon"] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25"
